updata: dashboard接口
